--- a/MemoD/app/src/main/res/layout/activity_findid.xml
+++ b/MemoD/app/src/main/res/layout/activity_findid.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/backToLogin"
             android:layout_width="13dp"
             android:layout_height="23dp"
             android:layout_gravity="center"
@@ -24,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            android:text="아이디 찾기 / 비밀번호 찾기"
+            android:text="이메일 찾기 / 비밀번호 찾기"
             android:textSize="25dp"></TextView>
     </LinearLayout>
 
@@ -46,9 +47,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="5dp"
-                android:text="아이디 찾기"
+                android:text="이메일 찾기"
                 android:textColor="#10595E"
-                android:textSize="18dp"></TextView>
+                android:textSize="18sp"></TextView>
 
             <View
                 android:layout_width="match_parent"
@@ -71,7 +72,7 @@
                 android:layout_marginBottom="5dp"
                 android:text="비밀번호 찾기"
                 android:textColor="#DBDBDB"
-                android:textSize="18dp"></TextView>
+                android:textSize="18sp"></TextView>
 
             <View
                 android:layout_width="match_parent"
@@ -96,13 +97,14 @@
 
             <EditText
                 android:id="@+id/phone_num"
-                android:layout_width="240dp"
+                android:layout_width="243dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
-                android:hint="휴대전화번호 입력 ('-' 제외)"></EditText>
+                android:hint="휴대전화번호 입력 ('-' 제외)"
+                android:inputType="phone"></EditText>
 
             <Button
-                android:id="@+id/certi_btn"
+                android:id="@+id/confirm_btn"
                 android:layout_width="102dp"
                 android:layout_height="35dp"
                 android:layout_marginLeft="10dp"
@@ -120,7 +122,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/certi_num"
+                android:id="@+id/confirm_phoneTxt"
                 android:layout_width="240dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
@@ -143,9 +145,10 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:backgroundTint="@drawable/findborderline"
-            android:text="아이디 찾기"
-            android:textSize="14dp">
+            android:background="@drawable/findborderline"
+            android:text="이메일 찾기"
+            android:textSize="14dp"
+            >
         </Button>
     </LinearLayout>
 
