--- a/MemoD/app/src/main/res/layout/activity_login.xml
+++ b/MemoD/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Login">
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,28 +18,37 @@
             android:layout_marginTop="226dp"
             android:src="@drawable/logo" />
 
+<!--        <EditText-->
+<!--            android:id="@+id/editTextTextEmailAddress"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:ems="10"-->
+<!--            android:inputType="textEmailAddress" />-->
+
         <EditText
-            android:id="@+id/id"
+            android:id="@+id/login_email"
             android:layout_width="374dp"
             android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_marginTop="100dp"
             android:background="@drawable/borderline"
-            android:hint="아이디"
+            android:hint="이메일"
+            android:inputType="textEmailAddress"
             android:paddingLeft="16dp"></EditText>
 
         <EditText
-            android:id="@+id/pw"
+            android:id="@+id/login_pw"
             android:layout_width="374dp"
-            android:layout_height="45dp"
+            android:layout_height="48dp"
             android:layout_gravity="center"
             android:layout_marginTop="22dp"
             android:background="@drawable/borderline"
             android:hint="비밀번호"
+            android:inputType="textWebPassword"
             android:paddingLeft="16dp"></EditText>
 
         <TextView
-            android:id="@+id/find"
+            android:id="@+id/login_findTV"
             android:layout_width="374dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -50,35 +59,37 @@
             android:textSize="12dp"></TextView>
 
         <Button
-            android:id="@+id/login"
+            android:id="@+id/login_btn"
             android:layout_width="374dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:backgroundTint="#68CB9F"
             android:text="로그인"
             android:textSize="16dp"></Button>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="메모디가 처음이신가요?"
+                android:textSize="12dp"></TextView>
+
+            <TextView
+                android:id="@+id/login_signupBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:text="가입하기"
+                android:textColor="#009688"></TextView>
+
+        </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="메모디가 처음이신가요?"
-            android:textSize="12dp"></TextView>
-
-        <TextView
-            android:id="@+id/signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:text="가입하기"
-            android:textColor="#009688"></TextView>
-
-    </LinearLayout>
 </LinearLayout>
