--- a/MemoD/app/src/main/res/layout/activity_profile.xml
+++ b/MemoD/app/src/main/res/layout/activity_profile.xml
@@ -204,6 +204,16 @@
             android:textSize="20dp">
 
         </Button>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
     </LinearLayout>
 
 </LinearLayout>
