--- a/MemoD/app/src/main/res/layout/activity_signup.xml
+++ b/MemoD/app/src/main/res/layout/activity_signup.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/backToLogin"
             android:layout_width="13dp"
             android:layout_height="23dp"
             android:layout_gravity="center"
@@ -43,75 +44,52 @@
             android:textColor="@color/black"
             android:textSize="23dp"></TextView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/id"
-                android:layout_width="255dp"
-                android:layout_height="45dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/borderline"
-                android:hint="아이디"
-                android:paddingLeft="16dp"></EditText>
-
-            <Button
-                android:id="@+id/overlap_btn"
-                android:layout_width="102dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/findborderline"
-                android:text="중복 확인"
-                android:textSize="12dp"></Button>
-
-        </LinearLayout>
-
         <EditText
-            android:id="@+id/pw"
+            android:id="@+id/signup_email"
             android:layout_width="374dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/borderline"
-            android:hint="비밀번호"
-            android:paddingLeft="16dp"></EditText>
-
-        <EditText
-            android:id="@+id/pw_confirm"
-            android:layout_width="374dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/borderline"
-            android:hint="비밀번호 확인"
-            android:paddingLeft="16dp"></EditText>
-
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="374dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/borderline"
-            android:hint="이름"
-            android:paddingLeft="16dp"></EditText>
-
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="374dp"
-            android:layout_height="45dp"
+            android:layout_height="48dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="5dp"
             android:background="@drawable/borderline"
             android:hint="이메일"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="16dp"></EditText>
+
+        <EditText
+            android:id="@+id/signup_pw"
+            android:layout_width="374dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/borderline"
+            android:hint="비밀번호"
+            android:inputType="none|textPassword"
+            android:paddingLeft="16dp"></EditText>
+
+        <EditText
+            android:id="@+id/signup_pw_confirm"
+            android:layout_width="374dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/borderline"
+            android:hint="비밀번호 확인"
+            android:inputType="textPassword"
+            android:paddingLeft="16dp"></EditText>
+
+        <EditText
+            android:id="@+id/signup_name"
+            android:layout_width="374dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/borderline"
+            android:hint="이름"
+            android:inputType="textPersonName"
             android:paddingLeft="16dp"></EditText>
 
         <LinearLayout
@@ -122,12 +100,13 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/phone"
+                android:id="@+id/signup_phone"
                 android:layout_width="255dp"
                 android:layout_height="45dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/borderline"
                 android:hint="휴대전화번호"
+                android:inputType="phone"
                 android:paddingLeft="16dp"></EditText>
 
             <Button
@@ -149,7 +128,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/confirm_num"
+                android:id="@+id/signup_confirm_phone"
                 android:layout_width="255dp"
                 android:layout_height="45dp"
                 android:layout_marginRight="10dp"
@@ -158,7 +137,7 @@
                 android:paddingLeft="16dp"></EditText>
 
             <Button
-                android:id="@+id/ok"
+                android:id="@+id/signup_ok"
                 android:layout_width="102dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="5dp"
@@ -169,7 +148,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/next"
+            android:id="@+id/signup_next"
             android:layout_width="374dp"
             android:layout_height="55dp"
             android:layout_gravity="center"
