--- a/MemoD/app/src/main/res/layout/activity_home_new.xml
+++ b/MemoD/app/src/main/res/layout/activity_home_new.xml
@@ -13,6 +13,7 @@
         android:padding="5dp">
 
         <ImageView
+            android:id="@+id/backToLogin"
             android:layout_width="120dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
