--- a/MemoD/app/src/main/res/layout/activity_search_user.xml
+++ b/MemoD/app/src/main/res/layout/activity_search_user.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/user_back"
             android:layout_width="13dp"
             android:layout_height="23dp"
             android:layout_gravity="center"
