--- a/MemoD/app/src/main/res/layout/activity_signup.xml
+++ b/MemoD/app/src/main/res/layout/activity_signup.xml
@@ -45,7 +45,7 @@
             android:textSize="23dp"></TextView>
 
         <EditText
-            android:id="@+id/signup_email"
+            android:id="@+id/email"
             android:layout_width="374dp"
             android:layout_height="48dp"
             android:layout_marginLeft="20dp"
@@ -57,7 +57,7 @@
             android:paddingLeft="16dp"></EditText>
 
         <EditText
-            android:id="@+id/signup_pw"
+            android:id="@+id/pw"
             android:layout_width="374dp"
             android:layout_height="48dp"
             android:layout_marginLeft="20dp"
@@ -69,7 +69,7 @@
             android:paddingLeft="16dp"></EditText>
 
         <EditText
-            android:id="@+id/signup_pw_confirm"
+            android:id="@+id/pwCheck"
             android:layout_width="374dp"
             android:layout_height="48dp"
             android:layout_marginLeft="20dp"
@@ -81,7 +81,7 @@
             android:paddingLeft="16dp"></EditText>
 
         <EditText
-            android:id="@+id/signup_name"
+            android:id="@+id/name"
             android:layout_width="374dp"
             android:layout_height="48dp"
             android:layout_marginLeft="20dp"
@@ -100,7 +100,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/signup_phone"
+                android:id="@+id/phone"
                 android:layout_width="255dp"
                 android:layout_height="45dp"
                 android:layout_marginRight="10dp"
@@ -116,7 +116,8 @@
                 android:layout_marginLeft="5dp"
                 android:background="@drawable/findborderline"
                 android:text="인증하기"
-                android:textSize="12dp"></Button>
+                android:textSize="12dp"
+                android:focusable="false"></Button>
 
         </LinearLayout>
 
@@ -128,7 +129,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/signup_confirm_phone"
+                android:id="@+id/confirmNum"
                 android:layout_width="255dp"
                 android:layout_height="45dp"
                 android:layout_marginRight="10dp"
@@ -137,25 +138,30 @@
                 android:paddingLeft="16dp"></EditText>
 
             <Button
-                android:id="@+id/signup_ok"
+                android:id="@+id/ok"
                 android:layout_width="102dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="5dp"
                 android:background="@drawable/findborderline"
+                android:clickable="false"
                 android:text="확인"
-                android:textSize="12dp"></Button>
+                android:textSize="12dp"
+                android:focusable="false"></Button>
+
 
         </LinearLayout>
 
         <Button
-            android:id="@+id/signup_next"
+            android:id="@+id/next"
             android:layout_width="374dp"
             android:layout_height="55dp"
             android:layout_gravity="center"
             android:layout_marginTop="80dp"
             android:background="@drawable/findborderline"
+            android:clickable="false"
             android:text="다음"
             android:textSize="20dp">
+            <!--            android:background="@drawable/findborderline"-->
 
         </Button>
 
