searchGroup, searchPost, searchUser 부분 xml, java파일 테스트 데이터로 view표시 완료

--- a/MemoD/app/src/main/res/layout/activity_search_post.xml
+++ b/MemoD/app/src/main/res/layout/activity_search_post.xml
@@ -146,9 +146,9 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/post_list"
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="520dp"
         android:layout_margin="10dp"
         android:padding="3dp">
 
