HomeNew에 디자인대로 모양 나올 수 있게 수정, Search(post,group,total,user)부분 하단 버튼 안보이는 오류 수정

--- a/MemoD/app/src/main/res/layout/activity_home_group_list_component.xml
+++ b/MemoD/app/src/main/res/layout/activity_home_group_list_component.xml
@@ -6,44 +6,40 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="150dp"
+        android:layout_height="160dp"
+        android:background="@drawable/group_creat_border"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:padding="8dp">
 
-        <LinearLayout
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/group_creat_border"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="8dp">
+        <ImageView
+            android:id="@+id/photo"
+            android:layout_width="142dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/image"></ImageView>
 
-            <ImageView
-                android:id="@+id/photo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/image"></ImageView>
-
-            <TextView
-                android:id="@+id/group_name_in"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="그룹 이름"
-                android:textColor="@color/black"
-                android:textSize="15dp"></TextView>
-
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/group_name_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal" />
-
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="그룹 이름"
+            android:textColor="@color/black"
+            android:textSize="15dp"></TextView>
 
     </LinearLayout>
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:orientation="vertical">-->
+
+<!--    </LinearLayout>-->
 </LinearLayout>
