--- a/MemoD/app/src/main/res/layout/activity_home_new.xml
+++ b/MemoD/app/src/main/res/layout/activity_home_new.xml
@@ -52,19 +52,20 @@
     </LinearLayout>
 
 
-    <ListView
-        android:id="@+id/group_list"
+    <GridView
+        android:id="@+id/total_userlistview"
         android:layout_width="340dp"
         android:layout_height="553dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:orientation = "horizontal"
+        android:numColumns="2">
 
-    </ListView>
+    </GridView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:gravity="bottom">
 
