--- a/MemoD/app/src/main/res/layout/activity_search_user.xml
+++ b/MemoD/app/src/main/res/layout/activity_search_user.xml
@@ -145,20 +145,20 @@
 
     </LinearLayout>
 
+
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/total_userlistview"
         android:layout_width="match_parent"
-        android:layout_height="520dp"
+        android:layout_height="580dp"
         android:layout_margin="10dp"
+        android:overScrollMode="always"
         android:padding="3dp">
 
     </ListView>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="212dp"
-        android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:gravity="bottom">
 
