--- a/MemoD/app/src/main/res/layout/activity_post.xml
+++ b/MemoD/app/src/main/res/layout/activity_post.xml
@@ -269,48 +269,51 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_height="212dp"
         android:layout_weight="1"
         android:gravity="bottom">
 
         <ImageView
             android:id="@+id/home"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="27dp"
+            android:layout_weight="1"
+            android:padding="25dp"
             android:src="@drawable/home_btn" />
 
         <ImageView
             android:id="@+id/chart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="27dp"
-            android:src="@drawable/chart" />
+            android:layout_width="match_parent"
+            android:layout_height="78dp"
+            android:layout_weight="1"
+            android:padding="25dp"
+            android:src="@drawable/chart_clicked" />
 
         <ImageView
             android:id="@+id/plus"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="27dp"
+            android:layout_weight="1"
+            android:padding="25dp"
             android:src="@drawable/plus" />
 
         <ImageView
             android:id="@+id/alert"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="27dp"
+            android:layout_weight="1"
+            android:padding="25dp"
             android:src="@drawable/alert" />
 
         <ImageView
             android:id="@+id/my_page"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="27dp"
+            android:layout_weight="1"
+            android:padding="25dp"
             android:src="@drawable/mypage_button" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
