--- a/MemoD/app/src/main/res/layout/activity_group_create.xml
+++ b/MemoD/app/src/main/res/layout/activity_group_create.xml
@@ -13,8 +13,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="13dp"
-            android:layout_height="23dp"
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:src="@drawable/back"></ImageView>
