--- a/MemoD/app/src/main/res/layout/activity_profile.xml
+++ b/MemoD/app/src/main/res/layout/activity_profile.xml
@@ -39,14 +39,19 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
             <ImageView
                 android:id="@+id/photo"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
-                android:src="@drawable/photo"></ImageView>
+                android:enabled="true"
 
+                android:scaleType="centerCrop"
+                android:src="@drawable/photo"
+                android:visibility="visible"
+                tools:visibility="visible"></ImageView>
 
             <EditText
                 android:id="@+id/information"
