HomeNew에서 GroupCreate와 GroupScreen으로 연결할 수 있게 이벤트 기반 완료(하지만 다음페이지의 xml에서 문제발생하여 다른 페이지로 연결해둠) 및 그룹리스트 디자인 다듬어서 추가완료

--- a/MemoD/app/src/main/res/layout/activity_home_group_list_component.xml
+++ b/MemoD/app/src/main/res/layout/activity_home_group_list_component.xml
@@ -11,11 +11,11 @@
         android:background="@drawable/group_creat_border"
         android:gravity="center"
         android:orientation="vertical"
+        android:padding="8dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:padding="8dp">
+        android:layout_marginBottom="10dp">
 
         <ImageView
             android:id="@+id/photo"
@@ -36,10 +36,4 @@
 
     </LinearLayout>
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="vertical">-->
-
-<!--    </LinearLayout>-->
 </LinearLayout>
