--- a/MemoD/app/src/main/res/layout/activity_home_group_list_new_component.xml
+++ b/MemoD/app/src/main/res/layout/activity_home_group_list_new_component.xml
@@ -5,45 +5,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="150dp"
+        android:layout_height="160dp"
+        android:background="@drawable/group_creat_new_border"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
-        <LinearLayout
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:background="#EFEFEF"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="8dp">
+        <ImageView
+            android:id="@+id/photo"
+            android:layout_width="142dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/new_button"></ImageView>
 
-            <ImageView
-                android:id="@+id/photo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/new_button"></ImageView>
-
-            <TextView
-                android:id="@+id/group_new"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="그룹 생성하기"
-                android:textColor="#B9B9B9"
-                android:textSize="15dp"></TextView>
-
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/group_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal" />
-
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="그룹 생성하기"
+            android:textColor="#B9B9B9"
+            android:textSize="15dp"></TextView>
 
     </LinearLayout>
+
 </LinearLayout>
