1. * Mypagemap 페이지에서 -> '내 타임라인' 버튼 누르면 Mypage_timeline 으로 이동 -> '내 지도' 버튼 누르면 다시 Mypagemap 으로 이동 -> '내 정보수정' 버튼 누르면 -> Activity_edit_profile으로 이동(실패)ㅜㅜ
Mypagemap, mypage_timeline, Mypagemap, Activity_edit_profile 각각 페이지끼리 모두 이동할 수 있도록 코딩해놓을게용

2.
*search_total
*search_group
*search_post
*search_user 페이지 에서 하단바에 알림 버튼 누르면 알림창 Notification 페이지로 이동하고 하단바에서 홈 버튼 누르면 다시 홈으로갈 수 있게 했습니다.

-------------------------------------------------
=> 내 정보 수정 페이지 이동은 아직 못 했어요

--- a/MemoD/app/src/main/res/layout/activity_post.xml
+++ b/MemoD/app/src/main/res/layout/activity_post.xml
@@ -98,10 +98,10 @@
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="match_parent"
-                android:layout_height="367dp"
+                android:layout_height="360dp"
                 android:layout_weight="1"
-                android:contentDescription="map"
-                android:src="@drawable/googlemap" />
+                android:contentDescription="map" />
+<!--                android:src="@drawable/googlemap" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
