--- a/MemoD/app/src/main/res/layout/notification.xml
+++ b/MemoD/app/src/main/res/layout/notification.xml
@@ -7,6 +7,7 @@
     <!-- androidx.constraintlayout.widget.ConstraintLayout -->
 
     <TextView
+        android:id="@+id/alert_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
@@ -42,7 +43,7 @@
             <ListView
                 android:id="@+id/ListView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="476dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
