--- a/MemoD/app/src/main/res/layout/activity_edit_profile.xml
+++ b/MemoD/app/src/main/res/layout/activity_edit_profile.xml
@@ -7,9 +7,118 @@
     tools:context=".EditProfileActivity"
     android:orientation="vertical">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bar"
+        android:background="?android:attr/windowBackground">
+
+        <androidx.appcompat.widget.Toolbar
+            android:layout_marginTop="5dp"
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/windowBackground">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!--
+                <ImageView
+                    android:id="@+id/close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/item1" />
+
+                    -->
+                <ImageView
+                    android:layout_marginRight="10dp"
+                    android:id="@+id/logo"
+                    android:layout_width="102dp"
+                    android:layout_height="41dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/logo" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="7dp"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/close"
+                        android:layout_width="13dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="left"
+                        android:src="@drawable/back_button" />
+
+                    <Button
+                        android:layout_marginLeft="280dp"
+                        android:layout_height="35dp"
+                        android:layout_width="65dp"
+                        android:text="저장"
+                        android:textSize="15dp"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        app:met_floatingLabel="normal"
+                        android:background="@drawable/btn_green" />
+
+
+                </LinearLayout>
+
+
+
+
+            </LinearLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <!--                <LinearLayout-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:orientation="vertical">-->
+
+        <!--                    &lt;!&ndash;-->
+        <!--                    <ImageView-->
+        <!--                        android:id="@+id/close"-->
+        <!--                        android:layout_width="wrap_content"-->
+        <!--                        android:layout_height="wrap_content"-->
+        <!--                        android:layout_alignParentStart="true"-->
+        <!--                        android:layout_centerVertical="true"-->
+        <!--                        android:src="@drawable/item1" />-->
+
+        <!--                        &ndash;&gt;-->
+        <!--                    <ImageView-->
+        <!--                        android:id="@+id/logo"-->
+        <!--                        android:layout_width="102dp"-->
+        <!--                        android:layout_height="41dp"-->
+        <!--                        android:layout_gravity="center"-->
+        <!--                        android:src="@drawable/logo" />-->
+
+        <!--                    <ImageView-->
+        <!--                        android:id="@+id/close"-->
+        <!--                        android:layout_width="13dp"-->
+        <!--                        android:layout_height="23dp"-->
+        <!--                        android:layout_gravity="left"-->
+        <!--                        android:layout_marginLeft="15dp"-->
+        <!--                        android:layout_marginTop="5dp"-->
+        <!--                        android:src="@drawable/back_button" />-->
+
+
+        <!--                </LinearLayout>-->
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="570dp"
+        android:layout_height="530dp"
         android:fillViewport="true">
 
         <LinearLayout
@@ -17,89 +126,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/bar"
-                android:background="?android:attr/windowBackground">
-
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:background="?android:attr/windowBackground">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <!--
-                        <ImageView
-                            android:id="@+id/close"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:layout_centerVertical="true"
-                            android:src="@drawable/item1" />
-
-                            -->
-                        <ImageView
-                            android:id="@+id/logo"
-                            android:layout_width="102dp"
-                            android:layout_height="41dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/logo" />
-
-                        <ImageView
-                            android:id="@+id/close"
-                            android:layout_width="13dp"
-                            android:layout_height="23dp"
-                            android:layout_gravity="left"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="5dp"
-                            android:src="@drawable/back_button" />
-
-
-                    </LinearLayout>
-
-                </androidx.appcompat.widget.Toolbar>
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="vertical">-->
-
-<!--                    &lt;!&ndash;-->
-<!--                    <ImageView-->
-<!--                        android:id="@+id/close"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_alignParentStart="true"-->
-<!--                        android:layout_centerVertical="true"-->
-<!--                        android:src="@drawable/item1" />-->
-
-<!--                        &ndash;&gt;-->
-<!--                    <ImageView-->
-<!--                        android:id="@+id/logo"-->
-<!--                        android:layout_width="102dp"-->
-<!--                        android:layout_height="41dp"-->
-<!--                        android:layout_gravity="center"-->
-<!--                        android:src="@drawable/logo" />-->
-
-<!--                    <ImageView-->
-<!--                        android:id="@+id/close"-->
-<!--                        android:layout_width="13dp"-->
-<!--                        android:layout_height="23dp"-->
-<!--                        android:layout_gravity="left"-->
-<!--                        android:layout_marginLeft="15dp"-->
-<!--                        android:layout_marginTop="5dp"-->
-<!--                        android:src="@drawable/back_button" />-->
-
-
-<!--                </LinearLayout>-->
-
-            </com.google.android.material.appbar.AppBarLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
