--- a/MemoD/app/src/main/res/layout/activity_home_new.xml
+++ b/MemoD/app/src/main/res/layout/activity_home_new.xml
@@ -18,7 +18,7 @@
             android:layout_width="120dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
-            tools:srcCompat="@drawable/logo" />
+            android:src="@drawable/logo" />
 
         <ImageView
             android:id="@+id/photo"
@@ -26,7 +26,7 @@
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginLeft="220dp"
-            android:src="@drawable/photo"></ImageView>
+            android:src="@drawable/photo"/>
 
     </LinearLayout>
 
