--- a/MemoD/app/src/main/res/layout/mypage_map.xml
+++ b/MemoD/app/src/main/res/layout/mypage_map.xml
@@ -88,6 +88,12 @@
 
         </RelativeLayout>
 
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/image_map" />
+
     </LinearLayout>
 
     <LinearLayout
