--- a/MemoD/app/src/main/res/layout/activity_groupmain.xml
+++ b/MemoD/app/src/main/res/layout/activity_groupmain.xml
@@ -88,7 +88,7 @@
                 android:layout_height="500dp"
                 android:paddingStart="40dp"
                 android:paddingEnd="40dp"
-                app:srcCompat="@drawable/googlemap" />
+                app:srcCompat="@drawable/image_map" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
