--- a/MemoD/app/src/main/res/layout/activity_post.xml
+++ b/MemoD/app/src/main/res/layout/activity_post.xml
@@ -146,6 +146,7 @@
             </LinearLayout>
 
             <LinearLayout
+
                 android:layout_width="151dp"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
@@ -153,7 +154,7 @@
 
                 <ImageView
                     android:id="@+id/imageView6"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
