--- a/MemoD/app/src/main/res/layout/timeline_row.xml
+++ b/MemoD/app/src/main/res/layout/timeline_row.xml
@@ -6,32 +6,32 @@
 
     <ImageView
         android:id="@+id/image"
-        android:src="@drawable/timeline_circle"
-        android:layout_marginTop="3dp"
         android:layout_width="30dp"
-        android:layout_height="30dp" />
+        android:layout_height="30dp"
+        android:layout_marginTop="3dp"
+        android:src="@drawable/timeline_circle" />
 
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/image"
         android:gravity="center_vertical"
         android:text="2021년 08월 09일"
         android:textColor="#000"
-        android:layout_toRightOf="@id/image"
-        android:layout_marginLeft="10dp"
-        android:textSize="13dp"/>s
+        android:textSize="13dp" />s
 
     <TextView
         android:id="@+id/place"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:text="종로 그라운드시 소 서촌"
-        android:layout_toRightOf="@id/date"
         android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/date"
         android:gravity="center_vertical"
-        android:textSize="16dp"
         android:maxLength="50"
         android:singleLine="true"
-        android:textColor="#000" />
+        android:text="종로 그라운드시 소 서촌"
+        android:textColor="#000"
+        android:textSize="16dp" />
 </RelativeLayout>
