--- a/MemoD/app/src/main/res/layout/list_row.xml
+++ b/MemoD/app/src/main/res/layout/list_row.xml
@@ -6,25 +6,25 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image"
-        android:src="@mipmap/ic_launcher"
         android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:layout_height="60dp"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/txtName"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
-        android:text="고승환님이 주세현님의 2021년 08월 08일의 게시물에 댓글을 달았습니다. 000000000000000"
-        android:layout_toRightOf="@id/image"
         android:layout_marginLeft="20dp"
-        android:textSize="12dp"
-        android:textColor="#000"/>
+        android:layout_toRightOf="@id/image"
+        android:text="고승환님이 주세현님의 2021년 08월 08일의 게시물에 댓글을 달았습니다. 000000000000000"
+        android:textColor="#000"
+        android:textSize="12dp" />
 
     <ImageView
         android:id="@+id/image2"
-        android:layout_toRightOf="@id/txtName"
-        android:layout_marginLeft="20dp"
-        android:src="@mipmap/ic_launcher"
         android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:layout_height="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/txtName"
+        android:src="@mipmap/ic_launcher" />
 </RelativeLayout>
